testcases/bad/test50.tig
/* Error: cyclic definition */
let
   type a = b
   type b = d
   type c = a
   type d = a
in
end
